# tiklay

./: .env.example  .eslintignore  .gitignore  DEVELOPMENT.md  IMPROVEMENTS_SUMMARY.md  PROJECT_STRUCTURE.md  PUBLISH_GITHUB.md  README.md  SETUP_LOCAL.md  WINDOWS_README.md  WINDOWS_SETUP.md  build-windows.bat  dev-with-log.bat  download-project.js  download-tiklay.sh  eslint.config.js  main.js  next-intl.config.ts  next.config.ts  package-lock.json  package.json  preload.js  setup-mysql.sh  setup-windows.bat  setup-windows.ps1  setup.sh  start-with-log.bat  test-windows-setup.bat  user_info.json
db/: custom.db
docs/: MIGRATION_ELECTRON_TO_TAURI.md  WINDOWS_DEVELOPMENT.md
messages/: en.json  es.json
prisma/: schema.prisma
src/: i18n.ts  middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate-icons.js
src-tauri/src/: main.rs
src/app/: page.tsx
src/app/[locale]/: layout.tsx
src/app/classes/: page.tsx
src/app/communication/: page.tsx
src/app/events/: page.tsx
src/app/finances/: page.tsx
src/app/my-classes-student/: page.tsx
src/app/my-students/: page.tsx
src/app/payments/: page.tsx
src/app/payments-student/: page.tsx
src/app/schedule/: page.tsx
src/app/settings/: page.tsx
src/app/students/: page.tsx
src/app/teacher-payments/: page.tsx
src/components/layout/: main-layout.tsx  sidebar-nav.tsx
src/components/quick-actions/: create-activity-dialog.tsx  (+3 more)
src/hooks/: use-performance.ts  use-user-role.tsx
src/lib/: audit-service.ts  offline-db.ts  platform.ts  security.ts  services.ts  sync-service.ts
(+14 files in other folders)
