[package]
name = "tiklay"
version = "0.1.0"
description = "Sistema de gestión completo para estudios de yoga y fitness"
authors = ["Tiklay Team"]
edition = "2021"

[lib]
name = "tiklay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tiklay"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"